--- a/projects/server/src/.env
+++ b/projects/server/src/.env
@@ -3,6 +3,7 @@ db_username = 0605
 db_password = group05
 db_database = 0605
 db_host = purwadhikabootcamp.com
+db_port = 3306
 db_dialect = mysql
 API_key = f9172defdd4152adc060c1f002116f97
 nodemailer_email = thomsonnode@gmail.com
